--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,8 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="commons-fileupload-1.3.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="commons-lang3-3.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
